feat: implementando navbar fixa e navegação entre catalogo, carrinho e configurações

--- a/styles/layout.padrao.module.css
+++ b/styles/layout.padrao.module.css
@@ -37,6 +37,10 @@
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
+.navLink {
+  text-decoration: none;
+  color: #ffffff;
+}
 
 .navItem:hover,
 .navItem.active {
