--- a/styles/colors.css
+++ b/styles/colors.css
@@ -18,7 +18,7 @@
   --cor-roxo-escuro: #31318B;
   
   --cor-azul-claro: #78B2E6;
-  --cor-azul-medio: #589AD6;
+  --cor-azul-medio: #048CD6;
   --cor-azul-escuro: #048CD6;
 
   --cor-verde-claro: #77CCA3;
