style/fix: tela de editar perfil e corrigindo bug de carregamento

--- a/styles/configuracoes/config.module.css
+++ b/styles/configuracoes/config.module.css
@@ -1,12 +1,20 @@
+/* ----- HEADER COM INFOS DO USUARIO -----*/
 .header {
   background-color: var(--cor-secundaria);
   border-radius: 16px;
   color: var(--cor-texto);
   max-width: 100%;
-  margin: 0 auto;
+  padding: 25px 25px 25px 40px;
+}
+.navLinkLoginCadastro{
+  text-decoration: none;
+  color: var(--cor-texto);
+  font-size: 14px;
+}
+.navLinkLoginCadastro:hover{
+  text-decoration: underline;
 }
 .infosUser {
-  padding: 25px;
   display: flex;
   align-items: center;
   gap: 24px;
@@ -47,32 +55,33 @@
   margin-right: 8px;
 }
 
+/* ----- CONTEUDO PRINCIPAL -----*/
 .body {
   max-width: 100%;
   margin: 24px auto 0;
 }
 .optionsContainer {
   background-color: var(--cor-secundaria);
-  padding: 10px 24px 24px 24px;
+  padding: 10px 24px 10px 24px;
   border-radius: 16px;
   color: var(--cor-texto);
   margin: 0 auto;
 }
-
 .section {
   width: 100%;
 }
-
 .sectionTitle {
   color: var(--cor-texto);
-  font-size: 1.1rem;
+  font-size: 16px;
   font-weight: 500;
+  margin-top: 14px;
   margin-bottom: 12px;
 }
 .buttonsGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 16px; 
+  margin-bottom: 20px;
 }
 .optionButton {
   display: flex;
@@ -85,7 +94,6 @@
   text-decoration: none;
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
-
 .optionButton:hover {
   transform: translateY(-3px);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -93,19 +101,15 @@
 .btnPurple {
   background-color: var(--cor-roxo-medio);
 }
-
 .btnBlue {
   background-color: var(--cor-azul-medio);
 }
-
 .btnPink {
   background-color: var(--cor-rosa-medio);
 }
-
 .btnGreen {
-  background-color: var(--cor-verde-medio);
+  background-color: var(--cor-verde-escuro);
 }
-
 .btnOrange {
   background-color: var(--cor-laranja-medio);
 }
