--- a/styles/catalogo/home.module.css
+++ b/styles/catalogo/home.module.css
@@ -2,8 +2,28 @@
   display: flex;
   align-items: center;
   gap: 1.5rem; 
+  margin-bottom: 30px;
 }
 
 .catalogoBackground{
   background-color: var(--cor-primaria);
+}
+
+.recomendados{
+  margin: 0px 0px 15px 0px;
+  background-color: var(--cor-secundaria);
+  border-radius: 16px;
+  padding: 10px 20px 20px 20px;
+}
+.cardsRow{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+.card{
+  background-color: var(--cor-amarelo-escuro);
+  border: 2px solid var(--cor-borda);
+  border-radius: 25px;
+  width: 190px;
+  height: 265px;
 }
