--- a/styles/criar-anuncio.module.css
+++ b/styles/criar-anuncio.module.css
@@ -1,24 +1,14 @@
 /* Criar Anúncio */
 .pageContainer {
-  min-height: 100vh;
-  background: #1a2333;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding-bottom: 80px;
+  width: 100%;
+  padding: 20px;
 }
 
 /* Form */
 .registerForm {
   position: relative;
-  width: 700px;
-  min-height: 900px;
-  margin: 120px auto 50px;
+  max-width: 700px;
+  margin: 0 auto;
   z-index: 10;
 }
 
