--- a/styles/carrinho/carrinho.module.css
+++ b/styles/carrinho/carrinho.module.css
@@ -50,21 +50,21 @@
 }
 
 .voltarCatalogo {
-  background: var(--cor-amarelo-medio);
-  color: var(--cor-secundaria);
-  padding: 0.75rem 1.5rem;
-  border: none;
-  border-radius: 8px;
-  font-size: 1rem;
   font-weight: 600;
+  padding: 12px 30px;
+  background: var(--cor-rosa-medio);
+  color: var(--cor-texto);
+  border: none;
+  border-radius: 10px;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.18s ease, box-shadow 0.18s ease;
   cursor: pointer;
-  transition: all 0.3s ease;
 }
 
 .voltarCatalogo:hover {
-  background: var(--cor-amarelo-escuro);
-  color: var(--cor-texto);
-  transform: translateY(-2px);
+  background: var(--cor-rosa-medio);
+  box-shadow: 0 5px 24px rgba(236, 64, 121, 0.463);
 }
 
 .itemCarrinho {
