correções pt.3 (só falta update do usuario, mais conhecido como final boss)

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -36,6 +36,7 @@
   --cor-amarelo-medio: #FBB829;
   
   --cor-amarelo-escuro: #534e40;
+  --cor-amarelo-escuro2: rgba(94, 84, 67, 0.5);
   --cor-amarelo-escuro-hoover: #767268;
 
 }
