--- a/styles/configuracoes/meus-anuncios.module.css
+++ b/styles/configuracoes/meus-anuncios.module.css
@@ -3,6 +3,7 @@
   border-radius: 16px;
   color: var(--cor-texto);
   padding: 10px 10px 20px 30px;
+  margin-bottom: 20px;
 }
 .divider{
   background-color: var(--cor-borda);
@@ -59,12 +60,30 @@
   box-shadow: 0 5px 24px rgba(236, 64, 121, 0.463);
 }
 
+.createButton2 {
+  font-weight: 600;
+  padding: 12px 30px;
+  background: var(--cor-rosa-medio);
+  color: var(--cor-texto);
+  border: none;
+  border-radius: 10px;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.18s ease, box-shadow 0.18s ease;
+  cursor: pointer;
+}
+
+.createButton2:hover {
+  background: var(--cor-rosa-escuro);
+}
+
+
 /* Grid de Anúncios */
 .listingsGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 /* Loading e Error States */
 .loadingMessage,
